Add GitHub link

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
   </fieldset>
   <canvas id="fmdsp" width="640" height="400" tabindex="0"></canvas>
   <footer>
-    <p>Music © Ian Johnson (<a href="https://creativecommons.org/public-domain/cc0/">CC0</a>)</p>
+    <p>Music © Ian Johnson (<a href="https://creativecommons.org/public-domain/cc0/">CC0</a>) (<a href="https://github.com/ianprime0509/music">GitHub</a>)</p>
     <p>Player: <a href="https://github.com/myon98/98fmplayer">98fmplayer</a></p>
   </footer>
 
